packages/end-user/src/css/components/_text-input.scss
.text-input {
    @extend %input-text;
    @extend %input-box;

    &:focus {
        border-color: $input-focus-border-color;
    }

    &::placeholder {
        @extend %placeholder-text;
    }

    &--error, &--error:focus {
        border-color: $color-critical-red;

        background-color: $color-white;

        padding-right: $spacing-xl;
    }

    &--success {
        border-color: $color-success-green;
        background-color: $color-white;

        padding-right: $spacing-xl;
    }

    &--primary {
        @include primary-input-text;

        padding: $spacing-xs + 1px $spacing-sm $spacing-xs - 2px $spacing-sm;
        text-align: center;

        &.text-input--error {
            padding-right: $spacing-sm;
            background-image: none;
        }

        &::placeholder {
            @include primary-input-text;
            color: $input-placeholder-color;
        }
    }

    &--dropdown-search {
        border-width: 0 0 1px 0;
        border-color: $color-neutral-70;
    }
}

.text-input__icon {
    font-family: $icon-font;
    font-size: 16px;
    line-height: 16px;
    text-transform: none;
    position: relative;
    width: 100%;

    &::before {
        position: absolute;
        right: $spacing-md;
        top: calc(45px * 0.5 - (16px / 2));
    }

    &--error {
        &::before {
            content: $pingicon-error-triangle;
            color: $color-critical-red;
        }
    }

    &--success {
        &::before {
            content: $pingicon-success-round;
            color: $color-success-green;
        }
    }
}

